# odo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml  completion.bash  odo.1
.github/workflows/: continuous-integration.yaml
migrations/2021-04-12-143143_create_actions/: down.sql  up.sql
src/: command.rs  database.rs  initialize.sql  lib.rs  main.rs
tests/: main.rs
