# Copyright 2021 Matthew James Kraai
#
# This file is part of odo.
#
# odo is free software: you can redistribute it and/or modify it under the terms of the GNU Affero
# General Public License as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# odo is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero
# General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License along with odo.  If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "odo"
version = "0.1.0"
authors = ["Matthew James Kraai <kraai@ftbfs.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3"
rusqlite = "0.25"

[dev-dependencies]
assert_cmd = "1"
tempfile = "3"

[features]
sqlite-bundled = ["rusqlite/bundled"]
